--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@reduxjs/toolkit": "^2.11.0",
     "axios": "^1.13.2",
     "bootstrap": "^5.3.8",
+    "date-fns": "^4.1.0",
     "react": "^19.2.0",
     "react-bootstrap": "^2.10.10",
     "react-dom": "^19.2.0",
