--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "kanban-board-task-management-app-frontend",
+  "name": "kanban-board-frontend",
   "private": true,
   "version": "0.0.0",
   "type": "module",
